--- a/clickrpg/index.html
+++ b/clickrpg/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Click RPG</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <script src="game.js" type="text/javascript"></script> 
